refactor: 라운드 결과를 반환하는 로직 변경